# FAlgebras

./: FAlgebras.cabal  README.md  stack.yaml
src/: Boolean.hs  Either.hs  Fix.hs  FullBinaryTree.hs  List.hs  Maybe.hs  Nat.hs  NonEmpty.hs  Payment.hs  RoseTree.hs  Tree.hs
test/: BooleanTests.hs  EitherTests.hs  FullBinaryTreeTests.hs  ListTests.hs  MaybeTests.hs  NatTests.hs  NonEmptyTests.hs  PaymentTests.hs  RoseTreeTests.hs  Spec.hs  TreeTests.hs
