name:                FAlgebras
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/FAlgebras#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Seemann
copyright:           2018 Mark Seemann
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Fix
                     , Nat
                     , Boolean
                     , Maybe
                     , List
                     , NonEmpty
                     , Either
                     , Tree
                     , RoseTree
                     , FullBinaryTree
                     , Payment
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , aeson
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite FAlgebras-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BooleanTests
                     , NatTests
                     , MaybeTests
                     , ListTests
                     , NonEmptyTests
                     , EitherTests
                     , TreeTests
                     , RoseTreeTests
                     , FullBinaryTreeTests
                     , PaymentTests
  build-depends:       base
                     , containers
                     , FAlgebras
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-hunit
                     , QuickCheck
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ploeh/FAlgebras
